// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should apply an error style if it is marked as invalid. 1`] = `
<b2b-radio-button name="radio-test">
  <mock:shadow-root>
    <div class="b2b-radio b2b-radio--error">
      <div class="b2b-radio-items">
        <input aria-labelledby="radio-test" class="b2b-radio-input" name="radio-test" type="radio">
        <b2b-input-label id="radio-test">
          <slot name="label">
            test
          </slot>
        </b2b-input-label>
      </div>
      <span>
        this is an error
      </span>
    </div>
  </mock:shadow-root>
</b2b-radio-button>
`;

exports[`should disable the radio button 1`] = `
<b2b-radio-button disabled="" name="radio-test">
  <mock:shadow-root>
    <div class="b2b-radio b2b-radio--disabled">
      <div class="b2b-radio-items">
        <input aria-labelledby="radio-test" class="b2b-radio-input" disabled="" name="radio-test" type="radio">
        <b2b-input-label disabled="" id="radio-test">
          <slot name="label">
            test
          </slot>
        </b2b-input-label>
      </div>
    </div>
  </mock:shadow-root>
</b2b-radio-button>
`;

exports[`should render a hint message if a hint string is specified 1`] = `
<b2b-radio-button name="radio-test">
  <mock:shadow-root>
    <div class="b2b-radio">
      <div class="b2b-radio-items">
        <input aria-labelledby="radio-test" class="b2b-radio-input" name="radio-test" type="radio">
        <b2b-input-label id="radio-test">
          <slot name="label">
            test
          </slot>
        </b2b-input-label>
      </div>
      <span>
        this is a hint
      </span>
    </div>
  </mock:shadow-root>
</b2b-radio-button>
`;

exports[`should render an error message if an error is specified and it is marked as invalid 1`] = `
<b2b-radio-button name="radio-test">
  <mock:shadow-root>
    <div class="b2b-radio b2b-radio--error">
      <div class="b2b-radio-items">
        <input aria-labelledby="radio-test" class="b2b-radio-input" name="radio-test" type="radio">
        <b2b-input-label id="radio-test">
          <slot name="label">
            test
          </slot>
        </b2b-input-label>
      </div>
      <span>
        this is an error
      </span>
    </div>
  </mock:shadow-root>
</b2b-radio-button>
`;

exports[`should render the radio button 1`] = `
<b2b-radio-button name="radio-test">
  <mock:shadow-root>
    <div class="b2b-radio">
      <div class="b2b-radio-items">
        <input aria-labelledby="radio-test" class="b2b-radio-input" name="radio-test" type="radio">
        <b2b-input-label id="radio-test">
          <slot name="label">
            test
          </slot>
        </b2b-input-label>
      </div>
    </div>
  </mock:shadow-root>
</b2b-radio-button>
`;
